--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="container-welcome">
             <h1>Bienvenidos <span>a</span></h1>
-            <img src="../Imagenes/Logo.png" alt="">
+            <img src="ASSET/Imagenes/Logo.png" alt="Logo de turistic">
         </div>
         <div class="vamos">
             <h3 class="h3">¿A donde vamos hoy?</h3>
