--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,9 +14,11 @@
     <link rel="shortcut icon" href="./ASSET/images/turistic.ico" type="image/x-icon">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-brands/css/uicons-brands.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Turistic</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -24,16 +27,17 @@
                 <p>Turistic</p>
             </div>
             <ul>
-                <li><a href="#"><span class="material-symbols-outlined">menu</span><span class="a">Categorias</span></a>
+                <li><a href="#Us"><span class="material-symbols-outlined">group</span><span class="a">Sobre nosotros</span></a></li>
+                <li><a href="#Catalogo"><span class="material-symbols-outlined">menu</span><span
+                            class="a">Catalogo</span></a>
                 </li>
-                <li><a href="#"><span class="material-symbols-outlined">add_a_photo</span><span
-                            class="a">Blog</span></a></li>
-                <li><a href="#"><span class="material-symbols-outlined">group</span><span class="a">Quienes somos</span></a></li>
+                <li><a href="#Blog"><span class="material-symbols-outlined">add_a_photo</span><span
+                            class="a">Blogs</span></a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="info-insti" style="background-image: url(./ASSET/images/Zona-colonial.webp);">
+        <section class="info-insti" style="background-image: url(./ASSET/images/Zona-colonial.webp);" id="Us">
             <div class="turistic-logo">
                 <img src="./ASSET/images/turistic.png" alt="turistic-logo" style="height: 25em;width: 25em; ">
             </div>
@@ -43,21 +47,72 @@
                     perferendis ducimus rerum adipisci praesentium fugiat enim eum suscipit, ad autem tenetur delectus
                     error. Error, porro.</p>
                 <br>
-                <div id="eslogan"><span id="e-1">Busca</span><span id="e-2">Descubre</span><span id="e-3">Diviertete</span></div>
+                <div id="eslogan"><span id="e-1">Busca</span><span id="e-2">Descubre</span><span
+                        id="e-3">Diviertete</span></div>
             </div>
+            <!-- !Catalogo -->
         </section>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="margin-top: -12em;">
-            <path fill="#0099ff" fill-opacity="1" d="M0,160L48,144C96,128,192,96,288,106.7C384,117,480,171,576,192C672,213,768,203,864,170.7C960,139,1056,85,1152,74.7C1248,64,1344,96,1392,112L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            <path fill="#f7f7f6" fill-opacity="1"
+                d="M0,160L48,144C96,128,192,96,288,106.7C384,117,480,171,576,192C672,213,768,203,864,170.7C960,139,1056,85,1152,74.7C1248,64,1344,96,1392,112L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
             </path>
         </svg>
         <section class="Catalogo">
-
+            <br id="Catalogo">
+            <br><br>
+            <article class="contenedor-cards">
+                <div class="cards">
+                    <img src="./ASSET/images/Ciudad/Santo Domingo.jpg" style="width: 18em;height: 9em;" alt="">
+                    <h3>Ciudades</h3>
+                    <p>Explora nuestras ciudades llenas de vidas y lugares unicos , prueba platos unicos de cada region ¿Que esperas para explorar?</p>
+                    <br>
+                    <br>
+                    <a href="#">Explorar --> </a>
+                </div>
+                <div class="cards">
+                    <img src="./ASSET/images/Montaña/Valle Nuevo.jpg" alt="" style="width: 18em;height: 9em;">
+                    <h3>Montañas</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis doloribus cupiditate culpa.
+                        Quas quam dolore, doloremque eius laborum voluptas nostrum cum obcaecati officia architecto
+                        asperiores sunt assumenda explicabo quia consectetur.</p>
+                    <br>
+                    <br>
+                    <a href="#">Explorar --> </a>
+                </div>
+                <div class="cards">
+                    <img src="./ASSET/images/Playa/Playa Grande.png" alt="" style="width: 18em;height: 9em;">
+                    <h3>Playas</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis doloribus cupiditate culpa.
+                        Quas quam dolore, doloremque eius laborum voluptas nostrum cum obcaecati officia architecto
+                        asperiores sunt assumenda explicabo quia consectetur.</p>
+                    <br>
+                    <br>
+                    <a href="#">Explorar --> </a>
+                </div>
+            </article>
+            <br><br><br><br>
         </section>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#0099ff" fill-opacity="1"
-                d="M0,32L48,37.3C96,43,192,53,288,58.7C384,64,480,64,576,85.3C672,107,768,149,864,165.3C960,181,1056,171,1152,138.7C1248,107,1344,53,1392,26.7L1440,0L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
-            </path>
-        </svg>
+        <!-- Blogs -->
+        <section class="Blog" id="Blog">
+            <div>
+                <h2>Proximamente</h2>
+            </div>
+        </section>
+        <!-- <footer>
+            <div class="contenedor-izquierdo">
+                <ul>
+                    <li><a href="#Us"><span class="material-symbols-outlined">group</span><span class="a">Quienes
+                                somos</span></a></li>
+                    <li><a href="#Catalogo"><span class="material-symbols-outlined">menu</span><span
+                                class="a">Catalogo</span></a>
+                    </li>
+                    <li><a href="#Blog"><span class="material-symbols-outlined">add_a_photo</span><span
+                                class="a">Blogs</span></a></li>
+                </ul>
+            </div>
+
+            <div class="contenedor-derecho"></div>
+        </footer> -->
 
         <!-- <div class="burbujas-contenedor" style="z-index: -1;">
     <div class="burbujasuno" style="z-index: -1;"></div>
@@ -72,4 +127,15 @@
     </div> -->
     </main>
 </body>
+<script>
+    document.addEventListener('socroll', () => {
+        const nav = document.querySelector('nav');
+        if (window.scrollY > 0) {
+            header.classList.add('scrolled');
+        } else {
+            header.classList.remove('scrolled');
+        }
+    });
+</script>
+
 </html>
