--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <p>Turistic</p>
             </div>
             <ul>
-                <li><a href="#Us"><span class="material-symbols-outlined">group</span><span class="a">Sobre nosotros</span></a></li>
+                <li><a href="#Us"><span class="material-symbols-outlined">group</span><span class="a">Sobre
+                            nosotros</span></a></li>
                 <li><a href="#Catalogo"><span class="material-symbols-outlined">menu</span><span
-                            class="a">Catalogo</span></a>
-                </li>
+                            class="a">Catalogo</span></a></li>
                 <li><a href="#Blog"><span class="material-symbols-outlined">add_a_photo</span><span
                             class="a">Blogs</span></a></li>
             </ul>
@@ -43,9 +43,10 @@
             </div>
             <div class="Text">
                 <h1 style="font-size: 3rem;">Turistic</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quod voluptatum quaerat, animi esse
-                    perferendis ducimus rerum adipisci praesentium fugiat enim eum suscipit, ad autem tenetur delectus
-                    error. Error, porro.</p>
+                <p>Turistic es una pagina dedicada a recopilar los lugares mas hermosos de nuestra Republica Dominicana tiene para ti. 
+                    Somos un equipo dispuesto a dar el cien porciento para darte las mejores opciones para tus futuras vacaciones en el 
+                    caribe.
+                </p>
                 <br>
                 <div id="eslogan"><span id="e-1">Busca</span><span id="e-2">Descubre</span><span
                         id="e-3">Diviertete</span></div>
@@ -64,30 +65,27 @@
                 <div class="cards">
                     <img src="./ASSET/images/Ciudad/Santo Domingo.jpg" style="width: 18em;height: 9em;" alt="">
                     <h3>Ciudades</h3>
-                    <p>Explora nuestras ciudades llenas de vidas y lugares unicos , prueba platos unicos de cada region ¿Que esperas para explorar?</p>
+                    <p>Explora nuestras ciudades llenas de vidas y lugares unicos , prueba platos unicos de cada region
+                        ¿Que esperas para explorar?</p>
                     <br>
                     <br>
-                    <a href="#">Explorar --> </a>
+                    <a href="#" class="button">Explorar --> </a>
                 </div>
                 <div class="cards">
                     <img src="./ASSET/images/Montaña/Valle Nuevo.jpg" alt="" style="width: 18em;height: 9em;">
                     <h3>Montañas</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis doloribus cupiditate culpa.
-                        Quas quam dolore, doloremque eius laborum voluptas nostrum cum obcaecati officia architecto
-                        asperiores sunt assumenda explicabo quia consectetur.</p>
+                    <p>Explora , Maravillate y descubre todas las aventuras que las montañas más altas del caribe tienen para ti.</p>
                     <br>
                     <br>
-                    <a href="#">Explorar --> </a>
+                    <a href="#" class="button">Explorar --> </a>
                 </div>
                 <div class="cards">
                     <img src="./ASSET/images/Playa/Playa Grande.png" alt="" style="width: 18em;height: 9em;">
                     <h3>Playas</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis doloribus cupiditate culpa.
-                        Quas quam dolore, doloremque eius laborum voluptas nostrum cum obcaecati officia architecto
-                        asperiores sunt assumenda explicabo quia consectetur.</p>
+                    <p>Visita las playas más hermosas del caribe, disfruta del maravilloso sol y las refrescantes aguas que el caribe tiene para ofrecer. ¡Que esperas para explorar!</p>
                     <br>
                     <br>
-                    <a href="#">Explorar --> </a>
+                    <a href="#" class="button">Explorar --> </a>
                 </div>
             </article>
             <br><br><br><br>
@@ -98,8 +96,29 @@
                 <h2>Proximamente</h2>
             </div>
         </section>
-        <!-- <footer>
+        <footer>
             <div class="contenedor-izquierdo">
+                <div class="encabezado"><img src="./ASSET/images/Leviatan.png" alt="" style="width: 40px;height: 40px;">
+                    <h3>Leviatán Proyect</h3>
+                </div>
+                <p>Comunidad de desarrolladores independientes, sin fines de lucro.</p>
+                <br>
+                <div class="iconos">
+                    <a href="https://github.com/LEVIATAN-TEAM/TURISTIC" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100"
+                            viewBox="0 0 50 50">
+                            <path
+                                d="M17.791,46.836C18.502,46.53,19,45.823,19,45v-5.4c0-0.197,0.016-0.402,0.041-0.61C19.027,38.994,19.014,38.997,19,39 c0,0-3,0-3.6,0c-1.5,0-2.8-0.6-3.4-1.8c-0.7-1.3-1-3.5-2.8-4.7C8.9,32.3,9.1,32,9.7,32c0.6,0.1,1.9,0.9,2.7,2c0.9,1.1,1.8,2,3.4,2 c2.487,0,3.82-0.125,4.622-0.555C21.356,34.056,22.649,33,24,33v-0.025c-5.668-0.182-9.289-2.066-10.975-4.975 c-3.665,0.042-6.856,0.405-8.677,0.707c-0.058-0.327-0.108-0.656-0.151-0.987c1.797-0.296,4.843-0.647,8.345-0.714 c-0.112-0.276-0.209-0.559-0.291-0.849c-3.511-0.178-6.541-0.039-8.187,0.097c-0.02-0.332-0.047-0.663-0.051-0.999 c1.649-0.135,4.597-0.27,8.018-0.111c-0.079-0.5-0.13-1.011-0.13-1.543c0-1.7,0.6-3.5,1.7-5c-0.5-1.7-1.2-5.3,0.2-6.6 c2.7,0,4.6,1.3,5.5,2.1C21,13.4,22.9,13,25,13s4,0.4,5.6,1.1c0.9-0.8,2.8-2.1,5.5-2.1c1.5,1.4,0.7,5,0.2,6.6c1.1,1.5,1.7,3.2,1.6,5 c0,0.484-0.045,0.951-0.11,1.409c3.499-0.172,6.527-0.034,8.204,0.102c-0.002,0.337-0.033,0.666-0.051,0.999 c-1.671-0.138-4.775-0.28-8.359-0.089c-0.089,0.336-0.197,0.663-0.325,0.98c3.546,0.046,6.665,0.389,8.548,0.689 c-0.043,0.332-0.093,0.661-0.151,0.987c-1.912-0.306-5.171-0.664-8.879-0.682C35.112,30.873,31.557,32.75,26,32.969V33 c2.6,0,5,3.9,5,6.6V45c0,0.823,0.498,1.53,1.209,1.836C41.37,43.804,48,35.164,48,25C48,12.318,37.683,2,25,2S2,12.318,2,25 C2,35.164,8.63,43.804,17.791,46.836z">
+                            </path>
+                        </svg></a>
+                    <a href="https://www.instagram.com/dani_1891234/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100"
+                            viewBox="0 0 50 50">
+                            <path
+                                d="M 16 3 C 8.8324839 3 3 8.8324839 3 16 L 3 34 C 3 41.167516 8.8324839 47 16 47 L 34 47 C 41.167516 47 47 41.167516 47 34 L 47 16 C 47 8.8324839 41.167516 3 34 3 L 16 3 z M 16 5 L 34 5 C 40.086484 5 45 9.9135161 45 16 L 45 34 C 45 40.086484 40.086484 45 34 45 L 16 45 C 9.9135161 45 5 40.086484 5 34 L 5 16 C 5 9.9135161 9.9135161 5 16 5 z M 37 11 A 2 2 0 0 0 35 13 A 2 2 0 0 0 37 15 A 2 2 0 0 0 39 13 A 2 2 0 0 0 37 11 z M 25 14 C 18.936712 14 14 18.936712 14 25 C 14 31.063288 18.936712 36 25 36 C 31.063288 36 36 31.063288 36 25 C 36 18.936712 31.063288 14 25 14 z M 25 16 C 29.982407 16 34 20.017593 34 25 C 34 29.982407 29.982407 34 25 34 C 20.017593 34 16 29.982407 16 25 C 16 20.017593 20.017593 16 25 16 z">
+                            </path>
+                        </svg></a>
+                </div>
+            </div>
+            <div class="contenedor-derecho">
                 <ul>
                     <li><a href="#Us"><span class="material-symbols-outlined">group</span><span class="a">Quienes
                                 somos</span></a></li>
@@ -110,21 +129,11 @@
                                 class="a">Blogs</span></a></li>
                 </ul>
             </div>
+        </footer>
+        <div class="derechos">
+            <p>Tecnología de Leviatán Team</p>
+        </div>
 
-            <div class="contenedor-derecho"></div>
-        </footer> -->
-
-        <!-- <div class="burbujas-contenedor" style="z-index: -1;">
-    <div class="burbujasuno" style="z-index: -1;"></div>
-    <div class="burbujasdos" style="z-index: -1;"></div>
-    <div class="burbujastres" style="z-index: -1;"></div>
-    <div class="burbujascuatro" style="z-index: -1;"></div>
-    <div class="burbujascinco" style="z-index: -1;"></div>
-    <div class="burbujasseis" style="z-index: -1;"></div>
-    <div class="burbujassiete" style="z-index: -1;"></div>
-    <div class="burbujasocho" style="z-index: -1;"></div>
-    <div class="burbujasnueve" style="z-index: -1;"></div>
-    </div> -->
     </main>
 </body>
 <script>
