Plantilla del catalogo v1

--- a/ASSET/HTML/ciudades.html
+++ b/ASSET/HTML/ciudades.html
@@ -3,36 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>turistic - Ciudades</title>
     <link rel="stylesheet" href="../CSS/ciudades.css">
+
+    <!-- logo -->
+    <link rel="shortcut icon" href="../images/turistic.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sigmar&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
-    <div class="tit">
-        <h1 class="tit-text">¡Vamonos!</h1>
-    </div>
+    <a href="https://leviatan-team.github.io/TURISTIC/"><div class="casa"><span class="material-symbols-outlined">home</span></div></a>
+    <main>
+        <section class="contenedor">
+            <a href="#"><div class="cards" style="background-image: url('../images/Ciudad/Santo\ Domingo.jpg');"><h2>Santo Domingo</h2></div></a>
+            <a href="" ><div class="cards" style="background-image: url('../images/Ciudad/jarabacoa.jpg');"><h2>Jarabacoa</h2></div></a>
+            <a href="" ><div class="cards" style="background-image: url('../images/Ciudad/Azua.jpg');"><h2>Azua</h2></div></a>
+            <a href="" ><div class="cards" style="background-image: url('../images/Ciudad/Santiago\ de\ los\ caballeros.jpg');"><h2>Satiago de los Caballeros</h2></div></a>
+            <a href="" ><div class="cards" style="background-image: url('../images/Ciudad/San\ Juan.jpg');"><h2>San Juan</h2></div></a>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="container">
-        <a href="DC-AC.html"><div class="uno"><h3>Altos de Chavón</h3></div></a>
-        <a href="DC-FF.html"><div class="dos"><h3>Fortaleza de San Felipe</h3></div></a>
-        <a href="DC-MDP.html"><div class="tres"><h3>Malecón de Puerto Plata</h3></div></a>
-        <div class="espacio"></div>
-        <a href="DC-MA.html"><div class="cuatro"><h3>Museo del Ámbar</h3></div></a>
-        <a href="DC-PM.html"><div class="cinco"><h3>Parque Manatí</h3></div></a>
-        <a href="DC-ZC.html"><div class="seis"><h3>Zona Colonial</h3></div></a>
-        <div class="espacio"></div>
-        <a href="DC-ALC.html"><div class="siete"><h3>Alcázar de Colón</h3></div></a>
-        <a href="DC-FC.html"><div class="ocho"><h3>Faro a Colón</h3></div></a>
-        <a href="DC-MCR.html"><div class="nueve"><h3>Museo de las Casas Reales</h3></div></a>
-    </div>
-    <br>
-    <br>
+        </section>
+    </main>
+
 </body>
 </html>
