--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         ¿Que esperas para explorar?</p>
                     <br>
                     <br>
-                    <a href="#" class="button">Explorar --> </a>
+                    <a href="./ASSET/HTML/ciudades.html" class="button">Explorar --> </a>
                 </div>
                 <div class="cards">
                     <img src="./ASSET/images/Montaña/Valle Nuevo.jpg" alt="" style="width: 18em;height: 9em;">
