--- a/ASSET/HTML/ciudades.html
+++ b/ASSET/HTML/ciudades.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>turistic - Ciudades</title>
     <link rel="stylesheet" href="../CSS/ciudades.css">
-
+    <!--fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
+    <!-- incos -->
+    <link rel="shortcut icon" href="./ASSET/images/turistic.ico" type="image/x-icon">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-brands/css/uicons-brands.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <!-- logo -->
     <link rel="shortcut icon" href="../images/turistic.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
