catalogo con border

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <img src="./ASSET/images/Ciudad/Santo Domingo.jpg" style="width: 18em;height: 9em;" alt="">
                     <h3>Ciudades</h3>
                     <p>Explora nuestras ciudades llenas de vidas y lugares unicos , prueba platos unicos de cada region
-                        ¿Que esperas para explorar?</p>
+                        Que esperas para explorar!</p>
                     <br>
                     <br>
                     <a href="./ASSET/HTML/ciudades.html" class="button">Explorar --> </a>
