Se renombro el archivo info-C ahora se llama info.css,se añadieron mas opciones de navegación para las paginas informativas cada locación.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     </main>
 </body>
-<script>
+<!-- <script>
     document.addEventListener('socroll', () => {
         const nav = document.querySelector('nav');
         if (window.scrollY > 0) {
@@ -145,6 +145,6 @@
             header.classList.remove('scrolled');
         }
     });
-</script>
+</script> -->
 
 </html>
