--- a/ASSET/HTML/Jarabacoa.html
+++ b/ASSET/HTML/Jarabacoa.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- incos -->
     <link rel="shortcut icon" href="./ASSET/images/turistic.ico" type="image/x-icon">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-brands/css/uicons-brands.css'>
@@ -19,19 +20,26 @@
     <!-- Logo -->
     <link rel="shortcut icon" href="../images/turistic.ico" type="image/x-icon">
     <!-- Style -->
-    <link rel="stylesheet" href="../CSS/info-C.css">
+    <link rel="stylesheet" href="../CSS/info.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    
 
 </head>
 
 <body>
-    <a href="../HTML/ciudades.html">
-        <div class="casa"><span class="material-symbols-outlined">
-                west
-            </span></div>
-    </a>
+    <div class="casa">
+        <li style="display: inline-flex;gap: 10px;">
+            <ul>
+                <a href="../HTML/ciudades.html"><span class="material-symbols-outlined">west</span></a>
+            </ul>
+            <ul>
+                <a href="../../index.html#Catalogo"><span class="material-symbols-outlined">menu</span></a>
+            </ul>
+            <ul>
+                <a href="../../index.html"><span class="material-symbols-outlined">home</span></a>
+            </ul>
+        </li>
+    </div>
     <main>
         <!--! presentación -->
         <article class="presentacion">
