--- a/ASSET/HTML/azua.html
+++ b/ASSET/HTML/azua.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <main>
+        <!-- Paguina de novedad o de que viene nevo contenido -->
         <img src="../images/Leviatan.png" alt="">
     </main>
 </body>
