--- a/ASSET/HTML/ciudades.html
+++ b/ASSET/HTML/ciudades.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
-    <a href="https://leviatan-team.github.io/TURISTIC/"><div class="casa"><span class="material-symbols-outlined">home</span></div></a>
+    <a href="../../index.html"><div class="casa"><span class="material-symbols-outlined">home</span></div></a>
     <main>
         <section class="contenedor">
             <a href="../HTML/Santo Domingo.html"><div class="cards" style="background-image: url('../images/Ciudad/Santo\ Domingo.jpg');"><h2>Santo Domingo</h2></div></a>
