--- a/ASSET/HTML/coson.html
+++ b/ASSET/HTML/coson.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Azua</title>
+    <title>Playa Coson</title>
     <!-- styles-->
     <link rel="stylesheet" href="../CSS/inp.css">
     <!-- icon -->
