--- a/ASSET/HTML/playa-bavaro.html
+++ b/ASSET/HTML/playa-bavaro.html
@@ -19,7 +19,7 @@
     <!-- Logo -->
     <link rel="shortcut icon" href="../images/turistic.ico" type="image/x-icon">
     <!-- Style -->
-    <link rel="stylesheet" href="../CSS/info-C.css">
+    <link rel="stylesheet" href="../CSS/info.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -27,11 +27,20 @@
 </head>
 
 <body>
-    <a href="../HTML/playas.html">
-        <div class="casa"><span class="material-symbols-outlined">
-                west
-            </span></div>
-    </a>
+    <div class="casa">
+        <li style="display: inline-flex;gap: 10px;">
+            <ul>
+                <a href="../HTML/ciudades.html"><span class="material-symbols-outlined">west</span></a>
+            </ul>
+            <ul>
+                <a href="../../index.html#Catalogo"><span class="material-symbols-outlined">menu</span></a>
+            </ul>
+            <ul>
+                <a href="../../index.html"><span class="material-symbols-outlined">home</span></a>
+            </ul>
+        </li>
+    </div>
+
     <main>
         <!--! presentación -->
         <article class="presentacion">
